[package]
name = "lindenmayer_graphic"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

homepage = "https://github.com/theobori/lindermayer"
description = "Build recursive images (fractals, plants, etc..), supporting multiple graphic APIs to build an SVGBuild recursive images (fractals, plants, etc..), supporting multiple graphic APIs to build an SVG"
repository = "https://github.com/theobori/lindermayer"

keywords = [
    "lib",
    "lindenmayer",
    "fractale",
    "svg",
    "grammer"
]

categories = [
    "rendering::data-formats"
]

license = "MIT"
readme = "README.md"

[dependencies]
turtle = "1.0.0-rc.3"
turtle-svg = "0.1.1"
rand = "0.8.4"
weighted_rand = "0.3.2"

[profile.dev.package."*"]
opt-level = 3
